force-app/main/default/objects/E2CP__Configuration_Section__mdt/E2CP__Configuration_Section__mdt.object-meta.xml
<CustomObject>
    <description>Represents a section in Email to Case Premium Setup</description>
    <label>Configuration Section</label>
    <pluralLabel>Configuration Sections</pluralLabel>
</CustomObject>