force-app/main/default/objects/E2CP__Configuration_Section__mdt/fields/E2CP__Configuration_Tab__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Configuration_Tab__c</fullName>
    <label>Configuration Tab</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
                <default>true</default>
                <label>Initial</label>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>New Comment Page</fullName>
            </value>
            <value>
                <fullName>Timeline</fullName>
            </value>
            <value>
                <fullName>Widespread Issues</fullName>
            </value>
            <value>
                <fullName>Setting Variations</fullName>
            </value>
            <value>
                <fullName>Deliver the Best Experience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>