force-app/main/default/objects/E2CP__Configuration_Section__mdt/fields/E2CP__Help_Text__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Help_Text__c</fullName>
    <description>Text to display below the section name in Email to Case Premium Setup</description>
    <label>Help Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>