force-app/main/default/objects/E2CP__Configuration_Section__mdt/fields/E2CP__Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Icon_Name__c</fullName>
    <description>Name of the LDS icon to use for this section in Email to Case Premium Setup. For example utility:info</description>
    <label>Icon Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>